Fixed extra whitespace below images

--- a/components/EditionYear/EditionYear.module.scss
+++ b/components/EditionYear/EditionYear.module.scss
@@ -11,16 +11,16 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  flex-grow: 0;
   gap: 20px;
   width: calc(3 * 220px);
-  > a {
+  > a > span {
     transition: all 0.2s ease-in-out;
     box-shadow: 5px 5px 12px #888;
 
     &:hover {
       transform: scale(1.15);
       z-index: 10;
-      box-shadow: 8px 8px 15px #888;
     }
   }
 }
